# kubebox

./: .gitignore  COMMANDS.md  Dockerfile  README.md  main.tf  pyproject.toml  variables.tf
1_infra/: .gitignore  variables.tf
3_create/: pyproject.toml
3_create/controller/: main.py
apps/ide/: README.md  test.js
apps/sandbox/: .gitignore  Dockerfile  README.md  main.tf  pyproject.toml
apps/sandbox/sandbox/: main.py
apps/sandbox/scripts/: build_sandbox.sh  publish_sandbox.sh
